# netcad-demo-clabs1

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  b1.f1.clab.yaml  netcad.toml  pyproject.toml  requirements.txt  setup.env  setup.py  tasks.py
.netcad/device-types/: MR84.json  cEOS-8.json
checks/acc01.11/: cabling.json  device.json  interfaces.json  ipaddrs.json  switchports.json  transceivers.json  vlans.json
checks/acc01.d/: cabling.json  device.json  interfaces.json  ipaddrs.json  switchports.json  transceivers.json  vlans.json
checks/acc02.11/: cabling.json  device.json  interfaces.json  ipaddrs.json  switchports.json  transceivers.json  vlans.json
checks/acc02.d/: cabling.json  device.json  interfaces.json  ipaddrs.json  switchports.json  transceivers.json  vlans.json
checks/core01.11/: cabling.json  device.json  interfaces.json  ipaddrs.json  switchports.json  transceivers.json  vlans.json
checks/core01.d/: cabling.json  device.json  interfaces.json  ipaddrs.json  switchports.json  transceivers.json  vlans.json
configs/: acc01.11.cfg  acc01.cfg  acc01.d.cfg  acc02.11.cfg  acc02.cfg  acc02.d.cfg  core01.11.cfg  core01.cfg  core01.d.cfg
netcad_demo_clabs1/: __init__.py  cabling.py  design.py  ipam.py  vlans.py
netcad_demo_clabs1/designs/: b1_f1.py  b1_f2.py  b2_f9.py  (+1 more)
templates/: aaa.jinja2  access_switch.jinja2  core_switch.jinja2  interface_access.jinja2  interface_ma0.jinja2  interface_trunk.jinja2  interface_unused.jinja2  interface_vlan.jinja2  interfaces.jinja2  mgmt.jinja2  vlans.jinja2
tests/: test_netcad_demo_clabs1.py
(+70 files in other folders)
