[tool.poetry]
name = "netcad-demo-clabs1"
version = "0.1.0"
description = "NetCadCam demonstration using ContainerLabs"
readme = "README.md"
authors = ["Jeremy Schulman"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]
